[project]
name = "text-to-image"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "diffusers>=0.31.0.dev0",
    "google-genai>=1.60.0",
    "hpsv2>=1.2.0",
    "hydra-orm",
    "image-reward>=1.5",
    "jupyterlab>=4.5.3",
    "seaborn==0.13.2",
    "torch==2.4.0",
    "torchvision==0.19.0",
    "tqdm==4.66.4",
    "transformers==4.38.2",
]

[tool.uv.sources]
diffusers = [
    { git = "https://github.com/huggingface/diffusers", tag = "af28ae2d5ba0ef80d99fff7859ebea730e1cf3f8" },
]
image_reward = [
    { git = "https://git@github.com/THUDM/ImageReward", tag = "2ca71bac4ed86b922fe53ddaec3109fe94d45fd3" },
]
hydra-orm = [
    { git = "https://github.com/reepoi/hydra-orm", tag = "v0.1.4" },
]

[tool.uv]
override-dependencies = ["pytest==7.2.0"]
